deploy/container-registry.yaml
#
#
# Also requires linking the pushSecret to the builder Service Account:
#   $ oc secrets link builder container-registry-auth
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: container-registry
  labels:
    app: container-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: container-registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: container-registry
    spec:
      restartPolicy: Always
      containers:
        - name: docker-registry
          image: docker.io/library/registry:2
          volumeMounts:
            - name: container-images
              mountPath: /var/lib/registry
            - name: htpasswd
              mountPath: /auth
      volumes:
        - name: container-images
          persistentVolumeClaim:
            claimName: image-registry
        - name: htpasswd
          secret:
            secretName: container-registry-auth
---
apiVersion: v1
kind: Service
metadata:
  name: container-registry
  labels:
    app: container-registry
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: container-registry
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: registry
  labels:
    app: container-registry
spec:
  port:
    targetPort: 5000
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: container-registry
    weight: 100
  wildcardPolicy: None
